src/objects/KS_Organizacion_Cliente__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto vinculado con las cuentas (marcas) que muestra las organizaciones de ventas para cada cliente</description>
    <fields>
        <fullName>KS_Activa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_AprobacionPendiente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>En Aprobación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_AprobacionRegimenVisitas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AprobacionRegimenVisitas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Area_Cod__c</fullName>
        <formula>TEXT( KS_Area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cod. Área</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Area__c</fullName>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_contabilizacion_para_sociedad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bloqueo contabilizacion para_sociedad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_de_entrega_para_cliente__c</fullName>
        <label>Bloqueo de entrega para cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_entrega_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_de_factura_para_cliente__c</fullName>
        <label>Bloqueo de factura para cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_factura_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_de_pedido_para_cliente__c</fullName>
        <label>Bloqueo de pedido para cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_pedido_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Canal_Cliente__c</fullName>
        <formula>IF ( KS_Cliente_solicitante__c != null, text(KS_Cliente_solicitante__r.KS_Canal__c), 
IF ( KS_Cliente_Distribucion__c != null, text(KS_Cliente_Distribucion__r.KS_Canal__c), &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Canal_de_distribucion__c</fullName>
        <label>Canal de distribución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clasificacion_de_Clientes__c</fullName>
        <label>Clasificación de Clientes (Análisis AB)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Clave_de_condiciones_de_pago__c</fullName>
        <label>Clave de condiciones de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0001</fullName>
                </value>
                <value>
                    <fullName>0004</fullName>
                </value>
                <value>
                    <fullName>B001</fullName>
                </value>
                <value>
                    <fullName>B002</fullName>
                </value>
                <value>
                    <fullName>B003</fullName>
                </value>
                <value>
                    <fullName>B004</fullName>
                </value>
                <value>
                    <fullName>B005</fullName>
                </value>
                <value>
                    <fullName>B006</fullName>
                </value>
                <value>
                    <fullName>B007</fullName>
                </value>
                <value>
                    <fullName>B008</fullName>
                </value>
                <value>
                    <fullName>B009</fullName>
                </value>
                <value>
                    <fullName>B010</fullName>
                </value>
                <value>
                    <fullName>B011</fullName>
                </value>
                <value>
                    <fullName>B012</fullName>
                </value>
                <value>
                    <fullName>B013</fullName>
                </value>
                <value>
                    <fullName>B014</fullName>
                </value>
                <value>
                    <fullName>B015</fullName>
                </value>
                <value>
                    <fullName>B016</fullName>
                </value>
                <value>
                    <fullName>B017</fullName>
                </value>
                <value>
                    <fullName>B018</fullName>
                </value>
                <value>
                    <fullName>B019</fullName>
                </value>
                <value>
                    <fullName>B020</fullName>
                </value>
                <value>
                    <fullName>B021</fullName>
                </value>
                <value>
                    <fullName>B022</fullName>
                </value>
                <value>
                    <fullName>B023</fullName>
                </value>
                <value>
                    <fullName>B024</fullName>
                </value>
                <value>
                    <fullName>B025</fullName>
                </value>
                <value>
                    <fullName>B026</fullName>
                </value>
                <value>
                    <fullName>B027</fullName>
                </value>
                <value>
                    <fullName>B028</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Cliente_Dest_Mercancias__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Dest. Mercancias</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clientes Dest. Mercancias</relationshipLabel>
        <relationshipName>Clientes_Dest_Mercancias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Cliente_Distribucion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Distribución</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>KS_Distribuidores_SAP</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>KS_Lead</value>
            </filterItems>
            <filterItems>
                <field>Account.KS_Canal__c</field>
                <operation>equals</operation>
                <value>Distribuidores CRM</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distribuidores CRM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marcas Comerciales</relationshipLabel>
        <relationshipName>Organizaciones_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Cliente_solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente solicitante</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marcas Comerciales</relationshipLabel>
        <relationshipName>Clientes_solicitantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Coordinador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gestor de cuenta</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organizaciones_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Delegacion__c</fullName>
        <label>Delegación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Delegacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Email_gestor_cuenta__c</fullName>
        <formula>KS_Coordinador__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email gestor cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Estado_Avisos_autom_ticos__c</fullName>
        <formula>IF (  KS_AprobacionRegimenVisitas__c  = TRUE, IMAGE(&quot;/resource/1472593079000/bell_png&quot;, &quot;y&quot;,16,16),

IF (  KS_AprobacionPendiente__c  = TRUE, IMAGE(&quot;/resource/1485575951000/persona_png&quot;, &quot;y&quot;,16,16),
IMAGE(&quot;/resource/1472593163000/calendar_png&quot;, &quot;n&quot;,16,16))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado Avisos-automáticos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Gestor_is_Owner__c</fullName>
        <formula>IF( KS_Coordinador__c =  OwnerId , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestor is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Gr_cuenta__c</fullName>
        <formula>TEXT(KS_Cliente_Dest_Mercancias__r.KS_Grupo_de_ctas_deudor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gr.cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Grupo_de_vendedores__c</fullName>
        <label>Grupo de vendedores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Grupo_de_vendedores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_ID_Organizacion_Cliente__c</fullName>
        <externalId>true</externalId>
        <label>ID Organizacion Cliente</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_ID_Personal_Gestor__c</fullName>
        <formula>KS_Coordinador__r.KS_IDSAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Personal Gestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_CRM_Solicitante__c</fullName>
        <formula>KS_Cliente_solicitante__r.KS_Id_CRM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id CRM Solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Salesforce_Destinatario__c</fullName>
        <formula>KS_Cliente_Dest_Mercancias__r.KS_Id_Salesforce__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Salesforce Destinatario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Salesforce_Distribuidor__c</fullName>
        <formula>KS_Cliente_Distribucion__r.KS_Id_Salesforce__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Salesforce Distribuidor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Salesforce_Solicitante__c</fullName>
        <formula>KS_Cliente_solicitante__r.KS_Id_Salesforce__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Salesforce Solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Incoterms_parte_1__c</fullName>
        <label>Incoterms parte 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Incoterms_parte_2__c</fullName>
        <label>Incoterms parte 2</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Lista_de_precios__c</fullName>
        <label>Lista de precios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Lista_de_precios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Modificacion__c</fullName>
        <formula>TEXT(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modificación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_marca__c</fullName>
        <externalId>true</externalId>
        <label>Nombre marca</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Oficinas_de_ventas__c</fullName>
        <label>Oficinas de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Oficinas_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Peticion_borrado_para_reg_maestro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Petición borrado para registro maestro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Peticion_de_borrado_para_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Petición de borrado para cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Recurrencia__c</fullName>
        <inlineHelpText>Una vez establecida la recurrencia solicite aprobación del registro para que el responsable autorice el régimen de visitas y se generen los avisos automáticos.</inlineHelpText>
        <label>Recurrencia (días)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>365</fullName>
                </value>
                <value>
                    <fullName>---</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Responsable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ResponablesOrgCliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Scoring_Actividad__c</fullName>
        <label>Scoring Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Scoring</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Scoring_IF__c</fullName>
        <label>Scoring IF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scoring_AC</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Scoring_Negocio__c</fullName>
        <label>Scoring Negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Scoring</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Sector_Distribuidor__c</fullName>
        <label>Sector (Distribuidor)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Sociedad__c</fullName>
        <label>Sociedad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Sociedad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Switcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Switcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Tipologia_Distribuidor__c</fullName>
        <formula>KS_Cliente_Distribucion__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipología Distribuidor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipologia_Solicitante__c</fullName>
        <formula>KS_Cliente_solicitante__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipologia Solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Zona__c</fullName>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Zona_Geog</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_id18__c</fullName>
        <formula>IF(ISNULL(KS_Cliente_solicitante__c),
CASESAFEID( KS_Cliente_solicitante__c),
CASESAFEID( KS_Cliente_Distribucion__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id 18 Solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_ID_GestorCuenta__c</fullName>
        <formula>KS_Coordinador__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Gestor de Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_ID_OwnerAcc__c</fullName>
        <formula>KS_Cliente_solicitante__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID OwnerAcc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_ID_OwnerOC__c</fullName>
        <formula>Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID OwnerOC</label>
        <type>Text</type>
    </fields>
    <label>Organización Cliente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente_Distribucion__c</columns>
        <columns>KS_Cliente_Dest_Mercancias__c</columns>
        <columns>KS_Cliente_solicitante__c</columns>
        <columns>KS_Organizacion_de_ventas__c</columns>
        <columns>KS_Oficinas_de_ventas__c</columns>
        <columns>KS_Canal_de_distribucion__c</columns>
        <columns>KS_Sector_Distribuidor__c</columns>
        <columns>KS_Coordinador__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>KS_Organizacion_Cliente__c.KS_OrgClie_SAP</value>
        </filters>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Nombre de Organización Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizaciones Cliente</pluralLabel>
    <recordTypes>
        <fullName>KS_OrgClie_NOSAP</fullName>
        <active>true</active>
        <description>Origen Manual</description>
        <label>Organización Cliente</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_OrgClie_SAP</fullName>
        <active>true</active>
        <description>Origen Webservice</description>
        <label>Organización Cliente SAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_Solicitud_Marca_Comercial</fullName>
        <active>true</active>
        <description>RT para solicitudes de marcas comerciales</description>
        <label>Solicitud Marca Comercial</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ControlEdicionOrgCliente</fullName>
        <active>false</active>
        <description>Valida que sólo pueda editar la org-cliente el propietario o el admin</description>
        <errorConditionFormula>IF(($Profile.Id =&quot;00e58000000Udyj&quot; || $Profile.Id=&quot;00e58000000ISGQ&quot;),FALSE,
IF(KS_Coordinador__r.Id =&quot;&quot;,FALSE, IF( ($User.Alias =  Owner:User.Alias ||  $User.Id =  KS_Coordinador__r.Id ),FALSE,TRUE ))
)</errorConditionFormula>
        <errorMessage>Los registros de marcas comerciales tan sólo pueden ser editados por el usuario Gestor de Cuenta.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EvitaDuplicidadesdeOrgCliente</fullName>
        <active>false</active>
        <description>Controla que no se duplique una org-cliente</description>
        <errorConditionFormula>CONTAINS(KS_Cliente_solicitante__r.KS_Organizaciones_de_cuentas__c  ,  TEXT(KS_Organizacion_de_ventas__c)&amp;&quot;-&quot;&amp; TEXT(KS_Canal_de_distribucion__c) )</errorConditionFormula>
        <errorMessage>Esta intentando generar una marca comercial que ya existe para este cliente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrgClienteCompleto</fullName>
        <active>true</active>
        <description>Controla que se crean org-cliente completas</description>
        <errorConditionFormula>OR(ISPICKVAL( KS_Organizacion_de_ventas__c ,&quot;&quot;),
ISPICKVAL ( KS_Canal_de_distribucion__c ,&quot;&quot;),
ISPICKVAL ( KS_Sector_Distribuidor__c ,&quot;&quot;) )</errorConditionFormula>
        <errorMessage>La información provista para la creación de la marca asociada és incompleta. Debe de informarse de la Organización de Ventas, del canal de distribución y del sector de distribución.</errorMessage>
    </validationRules>
</CustomObject>